# tourpy

./: db_init.py  main.py  pyproject.toml
data/: base.py  data_to_db.py  forms.py  models.py
templates/: _base.html  _navigation.html  tour.html
