[tool.poetry]
name = "tourpy"
version = "0.1.0"
description = ""
authors = ["EgorOsaulenko <egorkapomidorka4000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-wtf = "^1.2.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
